bin_PROGRAMS = wisp
wisp_SOURCES = arith.c bitwise.c bool.c char.c compile.c control.c env.c equiv.c eval.c except.c file.c gc.c heap.c io.c keyword.c list.c main.c mysql.c print.c quasiquote.c read.c record.c signals.c stack.c string.c symbol.c system.c trace.c vector.c vm.c

wisp_LDADD =				\
	@READLINE_LIBS@	
